Added 1 in home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
                       
                      <div (click)="goToQuizPage('iq')" class="quiz-block-single iq-bg">
                        <div class="quiz-block-inner">
-                         <h5>Check and Enhance Your IQ tushar </h5>
+                         <h5>Check and Enhance Your IQ tushar 1</h5>
                          <img class="margin-tb-5" src="assets/images/newimages/IQ.png" alt="iq">
                           
                           <p>Check and compare your iq and know your about verbal, numerical, spatial intelligence</p>
